--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
 
 body{
+    background: #ECE9E6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: "Lato",sans-serif;
+    min-height: 100vh;
+    margin: 0;
 }
 .container{
+    background-color: #fff;
     width: 400px;
+    
+    
+}
+img{
+    max-width: 100%;
+}
+header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+header input{
+    background-color: #eee;
+    border: none;
+    border-radius:3px;
+    padding: 0.5rem 1rem;
+}
+header button{
+    background-color: transparent;
+    border: none;
+    color: #aaa;
+    font-size: 1.5rem;
+    margin-left:10px;
+}
+.fav-container{
+    padding: 1rem;
 }
