--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,10 @@ body{
 }
 .container{
     background-color: #fff;
+    box-shadow: 0 0 10px 2px #3333331a;
     width: 400px;
+    border-radius: 5px;
+    overflow: hidden;
     
     
 }
@@ -31,6 +34,7 @@ header input{
     border: none;
     border-radius:3px;
     padding: 0.5rem 1rem;
+    font-family: inherit;
 }
 header button{
     background-color: transparent;
@@ -40,5 +44,75 @@ header button{
     margin-left:10px;
 }
 .fav-container{
+    background-color: rgb(214, 214, 248);
     padding: 1rem;
+    text-align: center;
+}
+.fav-meals{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;    
+    list-style: none;
+    padding: 0;
+}
+.fav-meals li{
+    display: flex;
+    flex-direction: column;
+    width: 85px;
+    /* padding :0.5rem; */
+
+}
+.fav-meals li img{
+    border: 2px solid #FFFFFF;
+    box-shadow: 0 0 10px 5px #3333331a;
+    border-radius: 50%;
+    object-fit: cover;
+    height: 70px;
+    width: 70px;
+    
+}
+.fav-meals li span{
+    font-size: 0.8rem;
+    text-align: center;
+}
+.meal{
+    border-radius: 5px;
+    box-shadow: 0 0 10px 2px #3333331a;
+    margin:  1.5rem;
+
+}
+.meal-header{
+    position: relative;
+}
+.meal-header .random{
+    position: absolute;
+    top: 1rem;
+    background-color: #fff;
+    padding: 0.25rem 1rem;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+.meal-header img{
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+}
+.meal-body{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+}
+.meal-body h4{
+    margin: 0;
+}
+.meal-body .fav-btn{
+    background-color: transparent;
+    color: rgba(197,188,188);
+    cursor: pointer;
+    border: none;
+    font-size: 1.2rem;
+}
+.meal-body .fav-btn:active{
+    color: rebeccapurple;
 }
