added functions that add and remove favorite meal to the local storage

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,6 @@ header button{
     border: none;
     font-size: 1.2rem;
 }
-.meal-body .fav-btn:active{
+.meal-body .fav-btn.active{
     color: rebeccapurple;
 }
